# jarvis-ai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  cli.py  jarvis.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
commands/: calculator_command.py  notes_command.py  reminder_command.py  router.py  system_command.py  time_command.py  weather_command.py  web_search_command.py
jarvis/: __init__.py  boot.py  config.py  hud.py
jarvis/brain/: __init__.py  command_router.py  ollama_client.py
jarvis/memory/: __init__.py  conversation.py  note_taker.py  session_log.py
jarvis/skills/: __init__.py  acronym_expander.py  ai_image_gen.py  air_quality.py  alarm.py  alarm_clock.py  ambient_sounds.py  api_tester.py  art_history.py  assistant_persona.py  astronomy.py  birthday_tracker.py  book_tracker.py  brain_games.py  briefing.py  budget_planner.py  calculator.py  calendar_skill.py  carbon_footprint.py  chess_helper.py  clipboard.py  clipboard_history.py  code_explainer.py  code_runner.py  coding_challenges.py  color_palette.py  contact_book.py  cooking_timer.py  countdown.py  crypto_alerts.py  crypto_portfolio.py  crypto_stocks.py  currency.py  currency_news.py  daily_digest.py  daily_planner.py  debate_helper.py  dictionary.py  diet_tracker.py  document_reader.py  (+145 more)
jarvis/voice/: __init__.py  listener.py  speaker.py
tests/: test_memory.py  test_notes_command.py  test_time_command.py
utils/: logger.py  memory.py  ollama_client.py  speech_input.py  text_to_speech.py  wake_word.py
