
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jarvis-ai"
version = "0.2.0"
description = "An AI-powered voice assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "SpeechRecognition",
    "requests",
    "pyttsx3",
    "pyaudio",
    "python-dotenv",
]

[project.scripts]
jarvis = "jarvis:main"
jarvis-cli = "cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
